--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Habiter</title>
+  <title>College Foodie</title>
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
@@ -16,9 +16,10 @@
   <div class="container">
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a href="index.html" id="about">About</a> |
-      <a href="bot.html" id="bot">Habiter</a> |
-      <a href="build.html" id="build">Progress</a>
+        <a href="index.html" id="home">Home</a> |
+      <a href="about.html" id="about">About</a> |
+      <a href="foods.html" id="bot">Your Foods</a> |
+      <a href="profile.html" id="build">Profile</a>
     </nav>
 
     <div class="row">
