--- a/src/index.html
+++ b/src/index.html
@@ -23,10 +23,9 @@
     </nav>
 
     <div class="row">
-      <div class="col-4"><img src="assets/img/bot.png" alt="habiter bot"></div>
       <div class="col-8">
-        <h1>Hi! I'm Habiter.</h1> <br>I'm here to help you keep track of your good/bad habit.
-        <br> To start, enter your habit and check in with me everyday.
+        <h1>Foods</h1> 
+        <h1>Schools</h1>
       </div>
     </div>
     <div class="row">
