--- a/src/index.html
+++ b/src/index.html
@@ -1,50 +1,30 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<head>
-  <meta charset="UTF-8">
-  <title>College Foodie</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="custom.css">
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
-
-  <!-- our main CSS file -->
-  <link rel="stylesheet" type="text/css" href="styles.css">
-</head>
-
-<body>
-  <div class="container">
-
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a href="index.html" id="home">Home</a> |
-      <a href="about.html" id="about">About</a> |
-      <a href="foods.html" id="bot">Your Foods</a> |
-      <a href="profile.html" id="build">Profile</a>
+    <title>College Foodie</title>
+  </head>
+  <body>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">
+            <img src="salad.png" width="30" height="30" class="d-inline-block align-top" alt="">
+            College Foodie
+          </a>
+        </div>
+    </div>
     </nav>
-
-    <div class="row">
-      <div class="col-8">
-        <h1>Foods</h1> 
-        <h1>Schools</h1>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm"></div>
-      <div class="col-sm"><a href="start.html" class="btn btn-outline-dark">Next</a></< /div>
-        <div class="col-sm"></div>
-      </div>
-    </div>
-
-    <!-- bootstrap -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
-
-    <!-- chartjs -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.js"></script>
-
-    <!-- our main JS file -->
-    <script src="assets/js/main.js"></script>
-
-</body>
-
+    <h1>College Foodie</h1>
+    <h2>Recommended Foods</h2>
+    <h2>Recommended Colleges</h2>
+  </body>
 </html>
+
