--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <title>College Foodie</title>
   </head>
   <body>
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-light bg-light">
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="#">
@@ -20,6 +20,15 @@
             College Foodie
           </a>
         </div>
+        <ul class="nav navbar-nav navbar-left">
+          <li class="active px-3 link-dark"><a href="index.html">Home</a></li>
+          <li class="px-3 link-dark"><a href="foods.html">Your Foods</a></li>
+          <li class="px-3 link-dark"><a href="about.html">About</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="px-3"><a href="#">Sign Up</a></li>
+          <li class="px-3"><a href="#">Login</a></li>
+        </ul>
     </div>
     </nav>
     <h1>College Foodie</h1>
@@ -27,4 +36,4 @@
     <h2>Recommended Colleges</h2>
   </body>
 </html>
-
+  
