--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <title>College Foodie</title>
   </head>
   <body>
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-custom">
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="#">
@@ -20,12 +20,12 @@
             College Foodie
           </a>
         </div>
-        <ul class="nav navbar-nav navbar-left">
+        <ul class="nav navbar-nav navbar-left navbar-custom">
           <li class="active px-3 link-dark"><a href="index.html">Home</a></li>
           <li class="px-3 link-dark"><a href="foods.html">Your Foods</a></li>
           <li class="px-3 link-dark"><a href="about.html">About</a></li>
         </ul>
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-right navbar-custom">
           <li class="px-3"><a href="#">Sign Up</a></li>
           <li class="px-3"><a href="#">Login</a></li>
         </ul>
