--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,8 @@
         </div>
         <ul class="nav navbar-nav navbar-left navbar-custom">
           <li class="active px-3 link-dark"><a href="index.html">Home</a></li>
-          <li class="px-3 link-dark"><a href="foods.html">Your Foods</a></li>
+          <li class="px-3 link-dark"><a href="foods.html">Recommendations</a></li>
+          <li class="px-3 link-dark"><a href="rate.html">Rate Food</a></li>
           <li class="px-3 link-dark"><a href="about.html">About</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right navbar-custom">
@@ -31,9 +32,10 @@
         </ul>
     </div>
     </nav>
-    <h1>College Foodie</h1>
-    <h2>Recommended Foods</h2>
-    <h2>Recommended Colleges</h2>
+    <h1>Welcome To College Foodie!</h1>
+    <h2>Share knowledge to eat better and cheaper at college.</h2>
+    <h2>Popular Foods</h2>
+    <h2>Popular Colleges</h2>
   </body>
 </html>
   
