--- a/src/index.html
+++ b/src/index.html
@@ -27,13 +27,12 @@
           <li class="px-3 link-dark"><a href="about.html">About</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right navbar-custom">
-          <li class="px-3"><a href="#">Sign Up</a></li>
           <li class="px-3"><a href="#">Login</a></li>
         </ul>
     </div>
     </nav>
-    <h1>Welcome To College Foodie!</h1>
-    <h2>Share knowledge to eat better and cheaper at college.</h2>
+    <h1> College Foodie <img src="salad.png" width="100" height="100" class="d-inline-block align-middle" alt=""></h1>
+    <h3>Hungry after class? Tired of spending too much on bad food? <br> Share ratings to eat better and cheaper at college.</h3>
     <h2>Popular Foods</h2>
     <h2>Popular Colleges</h2>
   </body>
