basics front done

--- a/src/about.html
+++ b/src/about.html
@@ -32,6 +32,7 @@
     </div>
     </nav>
     <h2>We understand. <h2>
+        <img src="lunch_bowl.jpg" alt="Bowl full of food in a hand." width="300">
     <h3> Mystery meat... <br> <br>
         Overcooked pasta... <br> <br>
         Slimy salad greens... <br> <br>
