nav active color

--- a/src/foods.html
+++ b/src/foods.html
@@ -21,8 +21,8 @@
           </a>
         </div>
         <ul class="nav navbar-nav navbar-left navbar-custom">
-          <li class="active px-3 link-dark"><a href="index.html">Home</a></li>
-          <li class="px-3 link-dark"><a href="foods.html">Recommendations</a></li>
+          <li class="px-3 link-dark"><a href="index.html">Home</a></li>
+          <li class="active px-3 link-dark"><a href="foods.html">Recommendations</a></li>
           <li class="px-3 link-dark"><a href="rate.html">Rate Food</a></li>
           <li class="px-3 link-dark"><a href="about.html">About</a></li>
         </ul>
