--- a/src/about.html
+++ b/src/about.html
@@ -21,10 +21,10 @@
           </a>
         </div>
         <ul class="nav navbar-nav navbar-left navbar-custom">
-          <li class="active px-3 link-dark"><a href="index.html">Home</a></li>
+          <li class="px-3 link-dark"><a href="index.html">Home</a></li>
           <li class="px-3 link-dark"><a href="foods.html">Recommendations</a></li>
           <li class="px-3 link-dark"><a href="rate.html">Rate Food</a></li>
-          <li class="px-3 link-dark"><a href="about.html">About</a></li>
+          <li class="active px-3 link-dark"><a href="about.html">About</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right navbar-custom">
           <li class="px-3"><a href="#">Login</a></li>
@@ -37,7 +37,7 @@
         Overcooked pasta... <br> <br>
         Slimy salad greens... <br> <br>
         At college, it's easy to spend too much money on food that doesn't taste good or nourish your body. 
-        Yet, every college has it's hidden gems. Use College Foodie to rate and find food at your school.</h3>
+        Yet, every college has its hidden gems. Use College Foodie to rate and find food at your school.</h3>
     <h2>
         &bigstar;
         &bigstar;
