--- a/src/abouts.html
+++ b/src/abouts.html
@@ -8,35 +8,34 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <!-- our main CSS file -->
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="custom.css">
 </head>
 
 <body style="background-color: #dda0dd;">
  
     <nav class = "z-depth-0 plum">
         <ul id = "nav-mobile">
-            <li class="px-3" class = "left"> <a>
+            <li class="px-3 left"> <a href="log_in.html">
                 <img src="salad.png" width="30" height="30" class="d-inline-block align-top" alt="">
                 College Foodie
-              </a></li>
-            <li class="px-3 align-middle"><a class="active" href="log_in.html">Home</a></li>
+            <a></li>
             <li class="px-3 align-middle"><a href="food.html">Recommendations</a></li>
             <li class="px-3 align-middle"><a href="rates.html">Rate Food</a></li>
             <li class="about px-3 align-middle"><a href="abouts.html">About</a></li>
             <li class = "logged-in right" style = "display: none;">
-                <a href = "#" class = "grey-text modal-trigger" data-target = "modal-account">Account</a>
+                <a href = "#" class = "modal-trigger" data-target = "modal-account">Account</a>
 
             </li>
             <li class = "logged-in" style = "display: none;" >
-                <a href = "index.html" class = "grey-text" id = "logout"> Logout</a>
+                <a href = "index.html" id = "logout"> Logout</a>
             </li>
 
             <li class = "logged-out right" style = "display: none;">
-                <a href = "index.html" class = "grey-text modal-trigger" data-target = "modal-login">Login</a>
+                <a href = "index.html" class = "modal-trigger" data-target = "modal-login">Login</a>
             </li>
 
             <li class = "logged-out right" style = "display: none;">
-                <a href = "#" class = "grey-text modal-trigger" data-target = "modal-signup">Sign up</a>
+                <a href = "#" class = "modal-trigger" data-target = "modal-signup">Sign up</a>
             </li>
         </ul>
 
@@ -110,20 +109,20 @@
     </div>
 
     <h2>We understand. <h2>
-        <img src="lunch_bowl.jpg" alt="Bowl full of food in a hand." width="300">
-    <h3> Mystery meat... <br> <br>
+       <!-- <img src="lunch_bowl.jpg" alt="Bowl full of food in a hand." width="200"> -->
+    <h4> Mystery meat... <br> <br>
         Overcooked pasta... <br> <br>
         Slimy salad greens... <br> <br>
         At college, it's easy to spend too much money on food that doesn't taste good or nourish your body. 
-        Yet, every college has its hidden gems. Use College Foodie to rate and find food at your school.</h3>
-    <h2>
+        Yet, every college has its hidden gems. Use College Foodie to rate and find food at your school.</h4>
+    <h4>Because you deserve five star meals.</h4>
+    <h3>
         &bigstar;
         &bigstar;
         &bigstar;
         &bigstar;
         &bigstar;
-    </h2>
-    <h3>Because you deserve five star meals.</h3>
+    </h3>
 
 
     
