--- a/src/log_in.html
+++ b/src/log_in.html
@@ -15,16 +15,15 @@
  
     <nav class = "z-depth-0 plum">
             <ul id = "nav-mobile">
-                <li class="px-3" class = "left"> <a>
+                <li class="active px-3 left"> <a href="log_in.html">
                     <img src="salad.png" width="30" height="30" class="d-inline-block align-top" alt="">
                     College Foodie
-                  </a></li>
-                <li class="active px-3 align-middle"><a class="active" href="log_in.html">Home</a></li>
+                <a></li>
                 <li class="px-3 align-middle"><a href="food.html">Recommendations</a></li>
                 <li class="px-3 align-middle"><a href="rates.html">Rate Food</a></li>
                 <li class="px-3 align-middle"><a href="abouts.html">About</a></li>
                 <li class = "logged-in right" style = "display: none;">
-                    <a href = "#" class = "grey-text modal-trigger" data-target = "modal-account">Account</a>
+                    <a href = "#" class = "modal-trigger" data-target = "modal-account">Account</a>
 
                 </li>
                 <li class = "logged-in" style = "display: none;" >
@@ -32,11 +31,11 @@
                 </li>
 
                 <li class = "logged-out right" style = "display: none;">
-                    <a href = "index.html" class = "grey-text modal-trigger" data-target = "modal-login">Login</a>
+                    <a href = "index.html" class = "modal-trigger" data-target = "modal-login">Login</a>
                 </li>
 
                 <li class = "logged-out right" style = "display: none;">
-                    <a href = "#" class = "grey-text modal-trigger" data-target = "modal-signup">Sign up</a>
+                    <a href = "#" class = "modal-trigger" data-target = "modal-signup">Sign up</a>
                 </li>
             </ul>
 
@@ -103,7 +102,7 @@
         </div>
     </div>
     <h1> College Foodie <img src="salad.png" width="100" height="100" class="d-inline-block align-middle" alt=""></h1>
-    <h3>Hungry after class? Tired of spending too much on bad food? <br> Share ratings to eat better and cheaper at college.</h3>
+    <h4>Hungry after class? Tired of spending too much on bad food? <br> Share ratings to eat better and cheaper at college.</h4>
     <h2>Popular Foods</h2>
     <h2>Popular Colleges</h2>       
 
