--- a/src/abouts.html
+++ b/src/abouts.html
@@ -21,7 +21,7 @@
             <a></li>
             <li class="px-3 align-middle"><a href="food.html">Recommendations</a></li>
             <li class="px-3 align-middle"><a href="rates.html">Rate Food</a></li>
-            <li class="about px-3 align-middle"><a href="abouts.html">About</a></li>
+            <li class="active px-3 align-middle"><a href="abouts.html">About</a></li>
             <li class = "logged-in right" style = "display: none;">
                 <a href = "#" class = "modal-trigger" data-target = "modal-account">Account</a>
 
