--- a/src/rates.html
+++ b/src/rates.html
@@ -106,7 +106,7 @@
     <h1>Rate A Meal</h1>    
 
     <div class="container" style="margin-top: 40px;">
-        <ul class="collapsible z-depth-0 guides" style="border: none;">
+        <ul class="collapsible guides" style="border: none;">
     
         </ul>
       </div>
