--- a/src/log_in.html
+++ b/src/log_in.html
@@ -27,7 +27,7 @@
 
                 </li>
                 <li class = "logged-in" style = "display: none;" >
-                    <a href = "index.html" class = "grey-text" id = "logout"> Logout</a>
+                    <a href = "index.html" id = "logout"> Logout</a>
                 </li>
 
                 <li class = "logged-out right" style = "display: none;">
@@ -35,11 +35,11 @@
                 </li>
 
                 <li class="logged-in" style = "display:none;">
-                    <a href="#" class="grey-text modal-trigger" data-target="modal-create">Create Guide</a>
+                    <a href="#" class="modal-trigger" data-target="modal-create">Create Guide</a>
                   </li>
 
                 <li class = "logged-out" style = "display: none;">
-                    <a href = "#" class = "grey-text modal-trigger" data-target = "modal-signup">Sign up</a>
+                    <a href = "#" class = "modal-trigger" data-target = "modal-signup">Sign up</a>
                 </li>
             </ul>
 
@@ -117,7 +117,7 @@
     </div>
 
     <li class = "">
-        <a href = "#" class = "grey-text modal-trigger" data-target = "modal-signup">Sign up</a>
+        <a href = "#" class = "modal-trigger" data-target = "modal-signup">Sign up</a>
     </li>
 
 
