--- a/src/food.html
+++ b/src/food.html
@@ -31,8 +31,12 @@
             </li>
 
             <li class = "logged-out right" style = "display: none;">
-                <a href = "index.html" class = " modal-trigger" data-target = "modal-login">Login</a>
+                <a href = "#" class = "modal-trigger" data-target = "modal-login">Login</a>
             </li>
+
+            <li class="logged-in" style = "display:none;">
+                <a href="#" class="modal-trigger" data-target="modal-create">Create Guide</a>
+              </li>
 
             <li class = "logged-out right" style = "display: none;">
                 <a href = "#" class = "modal-trigger" data-target = "modal-signup">Sign up</a>
