--- a/src/log_in.html
+++ b/src/log_in.html
@@ -31,14 +31,14 @@
                 </li>
 
                 <li class = "logged-out right" style = "display: none;">
-                    <a href = "index.html" class = "modal-trigger" data-target = "modal-login">Login</a>
+                    <a href = "#" class = "modal-trigger" data-target = "modal-login">Login</a>
                 </li>
 
                 <li class="logged-in" style = "display:none;">
                     <a href="#" class="modal-trigger" data-target="modal-create">Create Guide</a>
                   </li>
 
-                <li class = "logged-out" style = "display: none;">
+                <li class = "logged-out right" style = "display: none;">
                     <a href = "#" class = "modal-trigger" data-target = "modal-signup">Sign up</a>
                 </li>
             </ul>
