--- a/src/log_in.html
+++ b/src/log_in.html
@@ -36,7 +36,7 @@
                 </li>
 
                 <li class="logged-in" style = "display:none;">
-                    <a href="#" class="modal-trigger" data-target="modal-create">Create Guide</a>
+                    <a href="#" class="modal-trigger" data-target="modal-create">Add A Rating</a>
                   </li>
 
                 <li class = "logged-out right" style = "display: none;">
@@ -83,16 +83,11 @@
         </div>
     </div>    
 
-    <div id = "modal-account" class = "modal">
-        <div class = "modal-content center-align">
-            <h4> Account details</h4> <br />
-            <div class = "account-details"></div>
-        </div>
-    </div>
+   
 
     <div id = "modal-create" class = "modal">
         <div class = "modal-content">
-            <h4> Create Guide </h4> <br/>
+            <h4> Add A Rating </h4> <br/>
             <form id = "create-form">
                 <div class = "input-field">
                     <input type = "text" id = "title" required>
