--- a/src/rates.html
+++ b/src/rates.html
@@ -35,7 +35,7 @@
             </li>
 
             <li class="logged-in" style = "display:none;">
-                <a href="#" class="modal-trigger" data-target="modal-create">Create Guide</a>
+                <a href="#" class="modal-trigger" data-target="modal-create">Add A Rating</a>
               </li>
 
             <li class = "logged-out right" style = "display: none;">
