--- a/src/abouts.html
+++ b/src/abouts.html
@@ -34,9 +34,7 @@
                 <a href = "#" class = "modal-trigger" data-target = "modal-login">Login</a>
             </li>
 
-            <li class="logged-in" style = "display:none;">
-                <a href="#" class="modal-trigger" data-target="modal-create">Create Guide</a>
-              </li>
+           
 
             <li class = "logged-out right" style = "display: none;">
                 <a href = "#" class = "modal-trigger" data-target = "modal-signup">Sign up</a>
@@ -67,7 +65,7 @@
 
     <div id = "modal-login" class = "modal">
         <div class = "modal-content">
-            <h4> Login  </h4> <br/>
+            <h4 style = "color: black"> Login  </h4> <br/>
             <form id = "login-form">
                 <div class = "input-field">
                     <input type = "email" id = "login-email" required />
@@ -82,16 +80,11 @@
         </div>
     </div>    
 
-    <div id = "modal-account" class = "modal">
-        <div class = "modal-content center-align">
-            <h4> Account details</h4> <br />
-            <div class = "account-details"></div>
-        </div>
-    </div>
+   
 
     <div id = "modal-create" class = "modal">
         <div class = "modal-content">
-            <h4> Create Guide </h4> <br/>
+            <h4 style = "color: black"> Add A Rating </h4> <br/>
             <form id = "create-form">
                 <div class = "input-field">
                     <input type = "text" id = "title" required>
