--- a/src/abouts.html
+++ b/src/abouts.html
@@ -43,7 +43,7 @@
 
     <div id = "modal-signup" class = "modal">
         <div class = "modal-content">
-            <h4> Sign up </h4> <br/>
+            <h4 style = "color: black"> Sign up </h4> <br/>
             <form id = "signup-form">
                 <div class = "input-field">
                     <input type = "email" id = "signup-email" required />
