--- a/abouts.html
+++ b/abouts.html
@@ -15,7 +15,7 @@
  
     <nav class = "z-depth-0 plum">
         <ul id = "nav-mobile">
-            <li class="px-3 left"> <a href="log_in.html">
+            <li class="px-3 left"> <a href="index.html">
                 <img src="salad.png" width="30" height="30" class="d-inline-block align-top" alt="">
                 College Foodie
             <a></li>
