--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
  
     <nav class = "z-depth-0 plum">
             <ul id = "nav-mobile">
-                <li class="active px-3 left"> <a href="log_in.html">
+                <li class="active px-3 left"> <a href="index.html">
                     <img src="salad.png" width="30" height="30" class="d-inline-block align-top" alt="">
                     College Foodie
                 <a></li>
@@ -30,8 +30,8 @@
                 <li class="px-3 align-middle"><a href="rates.html">Rate Food</a></li>
                 <li class="px-3 align-middle"><a href="abouts.html">About</a></li>
                 
-                <li class = "logged-in" style = "display: none;" >
-                    <a href = "index.html" class = "grey-text" id = "logout"> Logout</a>
+                <li class = "logged-in right" style = "display: none;" >
+                    <a href = "index.html" class = "modal-trigger"  id = "logout"> Logout</a>
                 </li>
 
                 <li class = "logged-out right" style = "display: none;">
@@ -39,8 +39,8 @@
                 </li>
 
                 
-                <li class = "logged-out" style = "display: none;">
-                    <a href = "#" class = "grey-text modal-trigger" data-target = "modal-signup">Sign up</a>
+                <li class = "logged-out right" style = "display: none;">
+                    <a href = "#" class = "modal-trigger" data-target = "modal-signup">Sign up</a>
                 </li>
             </ul>
 
@@ -49,7 +49,7 @@
 
     <div id = "modal-signup" class = "modal">
         <div class = "modal-content">
-            <h4> Sign up </h4> <br/>
+            <h4 style = "color: black"> Sign up </h4> <br/>
             <form id = "signup-form">
                 <div class = "input-field">
                     <input type = "email" id = "signup-email" required />
