--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
                 <img src="salad.png" width="30" height="30" class="d-inline-block align-top" alt="">
                 College Foodie
               </a></li>
-            <li class="px-3 align-middle"><a class="active" href="log_in.html">Home</a></li>
+            <li class="px-3 align-middle"><a class="active" href="index.html">Home</a></li>
             <li class="px-3 align-middle"><a href="food.html">Recommendations</a></li>
             <li class="px-3 align-middle"><a href="rates.html">Rate Food</a></li>
             <li class="px-3 align-middle"><a href="abouts.html">About</a></li>
